--- a/blogicum/templates/includes/comments.html
+++ b/blogicum/templates/includes/comments.html
@@ -8,7 +8,7 @@
   </form>
 {% endif %}
 <br>
-{% for comment in comments %}
+{% for comment in page_obj %}
   <div class="media mb-4">
     <div class="media-body">
       <h5 class="mt-0">
@@ -28,5 +28,7 @@
         Удалить комментарий
       </a>
     {% endif %}
+    
   </div>
 {% endfor %}
+{% include "includes/paginator.html" %}
